# log-anomaly-threat-detection

./: .env.example  .gitignore  README.md  pyproject.toml
app_engine_logs/raw_private/: .anonymization_salt
backend/app/: api.py  demo_runner.py  main.py  schemas.py
config/: datasets.yaml  model.yaml
docs/: dashboard_user_guide.md  data_dictionary.md  database_setup.md  deployment_notes.md  feature_dictionary.md  live_demo_plan.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx  styles.css
models/: request_iforest_20260611_172145.pkl  request_iforest_20260611_172210.pkl  request_iforest_20260615_223620.pkl  request_iforest_20260615_223730.pkl  request_iforest_20260623_220556.pkl  request_iforest_20260623_221511.pkl
reports/summaries/: baseline_model_summary.md  case_validation_summary.md  dataset_quality_summary.md  evaluation_summary.md  threat_scoring_summary.md
reports/tables/: app_log_quality.csv  request_log_quality.csv
scripts/: anonymize_app_engine_app_logs.py  anonymize_app_engine_logs.py  build_features.py  generalize_anonymized_paths.py  load_anonymized_logs_to_db.py  run_data_quality.py  run_evaluation.py  score_threats.py  train_baseline.py
sql/: schema.sql
src/log_anomaly_threat_detection/: __init__.py  anomaly_detection.py  dashboard_data.py  data_loading.py  data_quality.py  database.py  evaluation.py  feature_engineering.py  synthetic_scenarios.py  threat_scoring.py
src/log_anomaly_threat_detection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_data_loading.py
